--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,16 @@
             "name": "Listen for Xdebug",
             "type": "php",
             "request": "launch",
-            "port": 9003
+            "port": 9000,
+            "pathMappings": {
+                "/18120418_Football": "${workspaceFolder}"
+            },
+            "xdebugSettings": {
+                "max_children": 128,
+                "max_data": 1024,
+                "max_depth": 3,
+                "show_hidden": 1
+            }
         },
         {
             "name": "Launch currently open script",
